# openlob

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  bench_order_book.cpp
docs/: architecture.md  future_extensions.md  market_microstructure_notes.md  roadmap.md
include/openlob/agents/: agent.hpp  informed_trader_agent.hpp  market_maker_agent.hpp  noise_trader_agent.hpp
include/openlob/book/: matching_engine.hpp  order_book.hpp  price_level.hpp
include/openlob/core/: event.hpp  execution_report.hpp  instrument.hpp  order.hpp  timestamp.hpp  trade.hpp  types.hpp
include/openlob/metrics/: inventory.hpp  latency_stats.hpp  pnl.hpp
include/openlob/sim/: event_queue.hpp  latency_model.hpp  simulator.hpp
src/: main.cpp
src/agents/: informed_trader_agent.cpp  market_maker_agent.cpp  noise_trader_agent.cpp
src/book/: matching_engine.cpp  order_book.cpp
src/metrics/: inventory.cpp  latency_stats.cpp  pnl.cpp
src/sim/: event_queue.cpp  latency_model.cpp  simulator.cpp
tests/: CMakeLists.txt  test_event_queue.cpp  test_integration_foundation.cpp  test_matching_engine.cpp  test_order_book.cpp  test_simulator.cpp  test_smoke.cpp
